--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
+/* App.css */
+
 .App {
-  text-align: center;
+  position: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* App.css */
+
+/* Sidebar Styles */
+.p-sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  height: auto;
+  width: 250px;
+  background-color: lightgray; /* Wheat background color */
+  padding: 10px;
+  margin: 10px; /* Margin around the sidebar */
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  overflow-y: auto;
+  z-index: 999;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Toggle Button Styles */
+.toggle-button {
+  /* position: absolute; */
+  top: 10px;
+  /* background-color: transparent; */
+  border: none;
+  cursor: pointer;
+  /* margin-left: 260px; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.toggle-button:focus {
+  outline: none;
 }
 
-.App-link {
-  color: #61dafb;
+
+.p-sidebar ul {
+  list-style: none;
+  padding: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.p-sidebar ul li {
+  margin-bottom: 10px;
+}
+
+.p-sidebar ul li a {
+  color: #333;
+  text-decoration: none;
+  display: block;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.p-sidebar ul li a:hover {
+  background-color: #f0f0f0;
+}
+
+.sidebar-item-parent {
+  font-weight: bold;
+  margin-bottom: 5px;
 }
