--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
 .toggle-button {
   /* position: absolute; */
   top: 10px;
-  /* background-color: transparent; */
+  background-color: transparent;
   border: none;
   cursor: pointer;
   /* margin-left: 260px; */
