--- a/src/css/poemlist.css
+++ b/src/css/poemlist.css
@@ -1,26 +1,40 @@
-.poem-list-container {
+.custom-card {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 15px;
+    background-color: #fff;
+}
+
+.card-body {
+    position: relative;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    flex-direction: column;
+    height: 100%;
 }
 
-.poem-card {
-    width: 30%; 
-    min-height: 300px; 
-    margin-bottom: 20px;
+.card-title {
+    font-size: 1.25rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
 }
 
-.paginator-container {
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #ffffff;
+.home-poem-content {
+    flex: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
+    display: block;
+    flex-grow: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* Number of lines to show */
+    -webkit-box-orient: vertical;
+    /* white-space: normal; */
 }
 
-
-@media (max-width: 768px) {
-    .poem-card {
-        width: 100%; 
-    }
+.d-flex {
+    display: flex;
+    gap: 10px;
 }
