Added courses and storynovels details

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
   cursor: pointer;
 }
 
+.ellipsis {
+  flex-grow: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+}
 .popup_menu{
   position: absolute;
   top: 59px !important;
