details page added for poem and narrative

--- a/src/App.css
+++ b/src/App.css
@@ -192,6 +192,18 @@
 
 /* < - - - - - - - - - -  //#region common */
 
+.poem-card {
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.poem-card:hover {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+}
+
+.poem-card.selected {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3) !important;
+}
+
 .alert {
   --bs-alert-padding-x: 0.5rem !important;
   --bs-alert-padding-y: 0.5rem !important;
