--- a/src/css/dynamicForm.css
+++ b/src/css/dynamicForm.css
@@ -1,6 +1,7 @@
 /* General Form Styles */
 .dynamic-form {
-    background: linear-gradient(135deg, #72eaf7 0%, #65dcee 100%) !important;
+    /* background: linear-gradient(135deg, #72eaf7 0%, #65dcee 100%) !important; */
+    background: var(--cardColor) !important;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
