--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
 @import './css/dynamicForm.css';
+ 
+body {
+  font-family: 'Poppins', sans-serif;
+  background: var(--themeBgColor) !important;
+  height: 100%;
+  /* cursor: url("./pen.png"), auto !important */
+}
 /* books */
 
 .book-row {
@@ -86,11 +93,11 @@
 }
 
 .modal-gradient {
-  background: linear-gradient(135deg, #e0f7fa 0%, #80deea 100%) !important;
+  background: var(--themeBgColor) !important;
 }
 
 .modal-body-gradient {
-  background: linear-gradient(135deg, #80deea 0%, #b9fbc0 100%) !important;
+  background: var(--cardColor) !important;
 }
 
 .form-gradient {
